# discord-notifications

./: Cargo.toml  README.md  docker-compose.yml
discord/: Cargo.toml  Dockerfile  config.yml
discord/src/: main.rs
discord_consumer/: Cargo.toml  config.yml
discord_consumer/src/: main.rs
webhook/: .dockerignore  Cargo.toml  Dockerfile
webhook/src/: main.rs
webhook_gateway/: Cargo.toml
webhook_gateway/src/: main.rs
