[package]
name = "discord"
version = "0.1.0"
authors = ["Maniarr <nicolas@maniarr.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
serde = "1"
serde_json = "1"
serde_yaml = "0.8"
rdkafka = { version = "*", features = ["cmake-build"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
handlebars = "*"
