[package]
name = "discord"
version = "0.1.0"
authors = ["Maniarr <nicolas@maniarr.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
serde = "1"
serde_json = "1"
serde_yaml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
handlebars = "*"
log = "*"
env_logger = "*"
futures = "0.3"
pulsar = "4.0"
