[package]
name = "webhook"
version = "0.1.0"
authors = ["Maniarr <nicolas@maniarr.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = "1"
serde_json = "1"
hmac-sha1 = "*"
hmac = "*"
sha2 = "*"
hex = "*"
rdkafka = { version = "0.25", features = ["cmake-build"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "*"
log = "*"
quick-xml = { version = "*", features = [ "serialize" ] }
r2d2_redis = "0.14"
