[package]
name = "webhook"
version = "0.1.0"
authors = ["Maniarr <nicolas@maniarr.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac-sha1 = "*"
hmac = "*"
sha2 = "*"
hex = "*"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "*"
log = "*"
quick-xml = { version = "*", features = [ "serialize" ] }
r2d2_redis = "0.14"
futures = "0.3"
pulsar = "4.0"
tokio = { version = "1", features = ["full"] }
